--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.tymeleaf.org">
+<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
 <meta charset="utf-8">
