--- a/src/main/resources/templates/cotacao/cotacao_listagemdata.html
+++ b/src/main/resources/templates/cotacao/cotacao_listagemdata.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.tymeleaf.org">
+<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
 <meta charset="utf-8">
@@ -100,7 +100,9 @@
                 <i class="bi bi-pencil-square"></i>
             </a>
         </td>
-        <td>
+       
+       
+        <td sec:authorize="hasRole('ROLE_ADMIN')">
        	
 		<a type="button" class="delete" title="Excluir" th:href="@{/cotacoes/excluir/{id} (id=${cotacao.id}) }">
 		<i class="bi bi-trash3"></i></a> 
