--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -12,8 +12,7 @@
 	rel="stylesheet">
 <link th:href="@{/css/myStyle.css}" rel="stylesheet">
 <title>Sistema DEVCEASA</title>
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
@@ -287,16 +286,11 @@
 	</div>
 
 
-
-
-
-
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 
 
 		function limparCampos() {
-
 
 			document.getElementById("valor1").value = "";
 			document.getElementById("valor2").value = "";
@@ -316,214 +310,7 @@
 			buscarCotacaoAnterior();
 
 		}
-
-		function buscarCotacaoAnterior() {
-
-			var propriedadeId = document.getElementById("propriedade").value;
-			var dataCotacao = document.getElementById("dataCotacao").value;
-			
-			
-
-			console.log("ID da cotação:", propriedadeId);
-			console.log("Data da cotação:", dataCotacao);
-			
-			// Faça uma solicitação AJAX para buscar a cotação anterior
-			// Você pode usar uma biblioteca como jQuery ou o objeto XMLHttpRequest para isso
-
-			// Exemplo usando jQuery:
-			$.ajax({
-				url: "/cotacoes/buscar-cotacao-anterior",
-				method: "GET",
-				data: {
-					propriedadeId: propriedadeId,
-					dataCotacao: dataCotacao
-				},
-				success: function (response) {
-					// Preencha os campos do formulário com os dados da cotação anterior
-						
-					
-			 var campos = ["valor1", "valor2", "valor3", "valor4", "valor5", "valor6", "valor7", "valor8", "valor9", "valor10"];
-            	campos.forEach(function (campo) {
-                document.getElementById(campo).value = response[campo];
-            });
-
-           
-					document.getElementById("precoMinimo").value = response.precoMinimo;
-					document.getElementById("precoMedio").value = response.precoMedio;
-					document.getElementById("precoMaximo").value = response.precoMaximo;
-					document.getElementById("valorComum").value = response.valorComum;
-
-					document.getElementById("valorComumAnterior").value = response.valorComum;
-					console.log("Valor comum anterior:",document.getElementById("valorComumAnterior").value = response.valorComum) ;	
-					// Preencha outros campos, se necessário
-				},
-				error: function () {
-					// Trate erros, se necessário
-				}
-			});
-		}
-
-
-
-
-		function validarNumero(valor, campoId) {
-			var numero = parseFloat(valor.replace(',', '.'));
-
-			if (isNaN(numero)) {
-				alert("Por favor, insira um valor numérico válido no campo " + campoId + ".");
-				return false;
-			}
-
-			return true;
-		}
-
-		function calcularValores() {
-			var valores = [];
-			var camposValidos = true;
-
-			for (var i = 1; i <= 10; i++) {
-				var campoId = 'valor' + i;
-				var valor = document.getElementById(campoId).value;
-
-				if (valor !== '') {
-					if (!validarNumero(valor, campoId)) {
-						camposValidos = false;
-						break;
-					}
-
-					valores.push(parseFloat(valor.replace(',', '.')));
-				}
-			}
-
-			if (camposValidos) {
-
-
-
-				// Ajusta o cálculo do preço mínimo considerando o peso da cotação
-				var selectedIndex = document.getElementById('propriedade').selectedIndex;
-				var selectedOption = document.getElementById('propriedade').options[selectedIndex];
-
-				// Adicione um log para verificar o valor de peso
-				console.log("Peso da Cotação: " + selectedOption.dataset.peso);
-
-				var pesoDaCotacaoSelecionada = parseFloat(selectedOption.dataset.peso);
-				var pesoVariavel = parseFloat(document.getElementById('pesoVariavel').value.replace(',', '.'));
-				console.log("Peso Variavel da Cotação: " + pesoVariavel);
-				
-				
-				if (!isNaN(pesoVariavel)) {
-		            pesoDaCotacaoSelecionada = pesoVariavel;
-		        }
-				
-				if (isNaN(pesoDaCotacaoSelecionada) || pesoDaCotacaoSelecionada === null) {
-					// Se for NaN ou nulo, atribui o valor 1
-					pesoDaCotacaoSelecionada = 1;
-				}
-
-				console.log("Peso da Cotação (Float): " + pesoDaCotacaoSelecionada);
-
-
-
-				var precoMinimo = Math.min.apply(null, valores) / pesoDaCotacaoSelecionada;
-				var precoMaximo = Math.max.apply(null, valores) / pesoDaCotacaoSelecionada;
-				var precoMedio = valores.reduce(function (acc, val) {
-					return acc + val;
-				}, 0) / valores.length / pesoDaCotacaoSelecionada;
-
-				document.getElementById('precoMinimo').value = precoMinimo.toFixed(2).replace(',', '.');
-				document.getElementById('precoMaximo').value = precoMaximo.toFixed(2).replace(',', '.');
-				document.getElementById('precoMedio').value = precoMedio.toFixed(2).replace(',', '.');
-
-				// Calcula o valor modal
-				var contagemValores = {};
-				valores.forEach(function (valor) {
-					contagemValores[valor] = (contagemValores[valor] || 0) + 1;
-				});
-
-				var valorModal = null;
-				var contagemMaxima = 0;
-
-				for (var valor in contagemValores) {
-					if (contagemValores[valor] > contagemMaxima) {
-						contagemMaxima = contagemValores[valor];
-						valorModal = parseFloat(valor) / pesoDaCotacaoSelecionada;
-					}
-				}
-
-				if (contagemMaxima === 1) {
-					alert('Alerta: Nenhum valor modal encontrado.');
-				} else {
-					alert('Valor Modal: ' + valorModal.toFixed(2));
-
-					// Atualiza o campo valorComum (modal)
-					document.getElementById('valorComum').value = valorModal.toFixed(2).replace(',', '.');
-				}
-			}
-		}
-
-// culc field mercado with valorComum anterior and atual
-function calcularMercado() {
-    var valorComumAtual = parseFloat(document.getElementById("valorComum").value);
-    var valorComumAnterior = parseFloat(document.getElementById("valorComumAnterior").value);
-    
-    console.log("Valor Comum Anterior = : " + valorComumAnterior);
-    console.log("Valor Comum Atual = : " + valorComumAtual);
-
-    if (!isNaN(valorComumAnterior)) {
-        if (valorComumAtual > valorComumAnterior) {
-            document.getElementById("mercado").value = "MFI"; // Mercado Forte
-        } else if (valorComumAtual < valorComumAnterior) {
-            document.getElementById("mercado").value = "MFR"; // Mercado Ruim
-        } else if (valorComumAtual === valorComumAnterior) {
-            document.getElementById("mercado").value = "ME"; // Mercado Estável
-        } else {
-            document.getElementById("mercado").value = "MV"; // Mercado Vazio (não foi possível calcular a diferença)
-        }
-    } else {
-        document.getElementById("mercado").value = "MV"; // Caso não tenha valores da cotação anterior
-    }
-}
-
-// this funcion permit that search clean next input codigo, because if not clean the field show last codigo
-		function limparCampoCodigo() {
-			document.getElementById("codigoPesquisa").value = "";
-		}
-
-		function filtrarPorCodigo() {
-			var input, filter, select, options, i, txtValue;
-			input = document.getElementById("codigoPesquisa");
-			filter = input.value.toUpperCase();
-			select = document.getElementById("propriedade");
-			options = select.getElementsByTagName("option");
-
-			// Desmarcar todas as opções antes de aplicar o filtro
-			for (i = 0; i < options.length; i++) {
-				options[i].selected = false;
-			}
-
-			// Aplicar o filtro
-			for (i = 0; i < options.length; i++) {
-				txtValue = options[i].text || options[i].textContent;
-				if (txtValue.toUpperCase().indexOf(filter) > -1) {
-					options[i].style.display = "";
-					select.selectedIndex = i; // Selecionar automaticamente o produto encontrado
-				} else {
-					options[i].style.display = "none";
-				}
-			}
-
-			// Atualizar a exibição da seleção atual
-			var selectedOption = select.options[select.selectedIndex];
-			var selectedText = selectedOption ? selectedOption.text || selectedOption.textContent : "";
-			document.getElementById("selecaoAtual").innerText = "Seleção Atual: " + selectedText;
-
-			// Limpar os campos e buscar a cotação anterior
-			limparCampos();
-			buscarCotacaoAnterior();
-		}
-
-
-
+	
 	</script>
 	<script th:inline="javascript">
 		/*<![CDATA[*/
@@ -536,9 +323,11 @@ function calcularMercado() {
 		/*]]>*/
 	</script>
 
-
-
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/script/cotacao/buscarCotacaoAnterior.js"></script>
+<script src="/script/cotacao/calcularMercado.js"></script>
+<script src="/script/cotacao/limparCampoCodigo.js"></script><script src="/script/cotacao/filtrarPorCodigo.js"></script>
+<script src="/script/cotacao/calcularValores.js"></script>
 
 
 </body>
