--- a/src/main/resources/templates/nota/nota_cadastro.html
+++ b/src/main/resources/templates/nota/nota_cadastro.html
@@ -11,14 +11,16 @@
 <body>
     <div th:replace="~{navbar :: menu-principal}"></div>
 
-
-
+		
     <div class="container">
-        <h2 class="titulo">Cadastro de Nota Fiscal</h2>
+        <h2 class="titulo">Nota Fiscal</h2>
         
         	<div th:replace="~{alert}"></div>
 
-        <form id="notaForm" th:action="@{/notas/salvar}" th:object="${nota}" method="post">
+
+      	 <form id="notaForm" th:action="@{/notas/salvar}" th:object="${nota}" method="post">
+         
+         
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -28,9 +30,10 @@
                             <option th:each="portaria : ${portarias}" th:value="${portaria}" th:text="${portaria}"></option>
                         </select>
                     </div>
-                     <div class="form-group">
-                        <label for="data">Data</label>
-                        <input type="date" id="data" th:field="*{data}" class="form-control" required>
+                     <div class="form-group"  style="margin-top: 20px;">
+                        <label for="data"></label>
+                        <span> Data da Digitação</span>
+                       <span th:text="${#temporals.format(datadigitacao, 'dd-MM-yyyy')}" th:field=*{data}></span>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -60,7 +63,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="municipio">Município</label>
+                        <label for="municipioCodigo">Município</label>
                         <div class="input-group">
                             <select id="municipio" th:field="*{municipio.id}" class="form-control" required>
                                 <option value="" disabled selected>Selecione um município</option>
@@ -106,7 +109,6 @@
 
     <!-- Inclusão dos modais -->
     <div th:replace="~{municipioSearchModal :: municipioSearchModal}"></div>
-    <div th:replace="~{pesoTotalModal :: pesoTotalModal}"></div>
     <div th:replace="~{productSearchModal :: productSearchModal}"></div>
 
     <script>
@@ -308,7 +310,9 @@ function selectProduct(codigo, id, variedade, subvariedade) {
         }
     };
 </script>
+
   <script src="/script/nota/clearForm.js"></script>
+   
     <script src="/script/nota/municipioSearch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
