--- a/src/main/resources/templates/portaria/portaria_listagem.html
+++ b/src/main/resources/templates/portaria/portaria_listagem.html
@@ -4,24 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+   	<link th:href="@{/css/portaria.css}" rel="stylesheet">
+	
     <title>Controle de Portaria</title>
-    <style>
-        .table-sm td, .table-sm th, .table-sm input, .table-sm select {
-            font-size: 12px;
-            padding: 4px;
-        }
-        .scrollable-table {
-            max-height: 500px;
-            overflow-y: auto;
-        }
-    </style>
+   
 </head>
 <body>
 
     <div th:replace="~{navbar :: menu-principal}"></div>
 
     <div class="container mt-4">
+        
         <h2>Controle de Portaria</h2>
+        
         <div th:replace="~{alert}"></div>
         
         <form th:action="@{/portarias/salvar}" method="post">
@@ -75,45 +70,41 @@
                         <td th:text="${portaria.totalNotas}"></td>
                         <td th:text="${#numbers.formatDecimal(portaria.totalPeso, 1, 'DEFAULT', 2, 'DEFAULT')} + ' Kilos'"></td>
                         <td th:text="${portaria.statusSessao}"></td>
-                         <td>
+                        <td style="display: flex; flex-wrap: wrap; align-items: center;">
+   							 
+   							 <a class="look" th:href="@{/portarias/notas(data=${portaria.dataDaSessao})}" >
+								<i class="bi bi-eye-fill" title="Propriedades"></i>
+								</a>
+   							 
    							 <form th:action="@{/portarias/iniciar-digitalizacao/{id}(id=${portaria.id})}" sec:authorize="hasRole('EMPLOYEE')" method="post">
     						    <button type="submit" th:if="${portaria.statusSessao.name() == 'ABERTA'}" class="btn btn-primary btn-sm">
-        				 		   Iniciar Digitação
+        				 		   Digitar
        							 </button>
     						</form>
 							<form th:action="@{/notas/cadastrar}"  sec:authorize="hasRole('MANAGER')">
    								 <button type="submit" th:if="${portaria.statusSessao.name() == 'EM_DIGITACAO'}" class="btn btn-primary btn-sm" >
-   								
-     							   Digitar Notas
+   								   Digitar
    								 </button>
 							</form>
-						
-   							<form th:action="@{/portarias/iniciar-analise/{id}(id=${portaria.id})}" sec:authorize="hasRole('ADMIN')" method="post">
+							<form th:action="@{/portarias/iniciar-analise/{id}(id=${portaria.id})}" sec:authorize="hasRole('ADMIN')" method="post">
       							<button type="submit" th:if="${portaria.statusSessao.name() == 'EM_DIGITACAO'}" class="btn btn-warning btn-sm">
             						Iniciar Análise
       							</button>
     						</form>
-						
-                        
-                            <a th:href="@{/portarias/notas(data=${portaria.dataDaSessao})}"  class="btn btn-info btn-info" >Ver Notas</a>
-                        
-                         
-                            <a th:href="@{/portarias/excluir/{id}(id=${portaria.id})}" sec:authorize="hasRole('ADMIN')" class="btn btn-danger btn-sm" onclick="return confirm('Tem certeza que deseja excluir esta sessão?');">Excluir</a>
-                           
-
-                        
-                        	<form th:action="@{/portarias/editar-status/{id}(id=${portaria.id}, status=${portaria.statusSessao})} " sec:authorize="hasRole('ADMIN')"> 
-                        	<button type="submit" class="btn btn-warning btn-sm">Editar Status</button>
-   						
-                        		<select name="novoStatus" Class="form-select">
-                        			    <option value="ABERTA" th:selected="${portaria.statusSessao == 'ABERTA'}">Aberta</option>
-         								<option value="EM_DIGITACAO" th:selected="${portaria.statusSessao == 'EM_DIGITACAO'}">Em Digitação</option>
-            							<option value="EM_ANALISE" th:selected="${portaria.statusSessao == 'EM_ANALISE'}">Em Análise</option>
-            							<option value="COM_PENDENCIA" th:selected="${portaria.statusSessao == 'COM_PENDENCIA'}">Com Pendência</option>
-            							<option value="CONCLUIDA" th:selected="${portaria.statusSessao == 'CONCLUIDA'}">Concluída</option>
-       							 </select>
-       						  </form>	
-          
+						    
+						    	
+                            
+                            <form th:action="@{/portarias/editar-status/{id}(id=${portaria.id}, status=${portaria.statusSessao})}" sec:authorize="hasRole('ADMIN')" style="display: flex; align-items: center;">
+   							 	<select name="novoStatus" class="form-select" style="margin-right: 10px;">
+     						  	 <option value="ABERTA" th:selected="${portaria.statusSessao == 'ABERTA'}">Aberta</option>
+      						 	 <option value="EM_DIGITACAO" th:selected="${portaria.statusSessao == 'EM_DIGITACAO'}">Em Digitação</option>
+      							 <option value="EM_ANALISE" th:selected="${portaria.statusSessao == 'EM_ANALISE'}">Em Análise</option>
+       							 <option value="COM_PENDENCIA" th:selected="${portaria.statusSessao == 'COM_PENDENCIA'}">Com Pendência</option>
+       						 	 <option value="CONCLUIDA" th:selected="${portaria.statusSessao == 'CONCLUIDA'}">Concluída</option>
+   							 	</select>
+    							<button type="submit" class="btn btn-warning btn-sm">Alterar Status</button>
+							</form>
+       						  <a th:href="@{/portarias/excluir/{id}(id=${portaria.id})}" sec:authorize="hasRole('ADMIN')" class="btn btn-danger btn-sm" onclick="return confirm('Tem certeza que deseja excluir esta sessão?');">Excluir</a>
                         </td>
                     </tr>
                 </tbody>
