--- a/src/main/resources/templates/nota/nota_listagem.html
+++ b/src/main/resources/templates/nota/nota_listagem.html
@@ -26,6 +26,25 @@
     <div class="container mt-4">
         <h2 class="mb-3">Notas</h2>
 
+		 <form th:action="@{/notas/listarcomfiltro}" method="get" class="mb-4">
+        	<div class="row g-3">
+            	<div class="col-md-3">
+                	<label for="dataInicio" class="form-label">Data Início</label>
+                	<input type="date" class="form-control" id="dataInicio" name="dataInicio">
+            	</div>
+            	<div class="col-md-3">
+                	<label for="dataFim" class="form-label">Data Fim</label>
+                	<input type="date" class="form-control" id="dataFim" name="dataFim">
+            	</div>
+            	<div class="col-md-3">
+                	<label for="codigoPropriedade" class="form-label">Código da Propriedade</label>
+                	<input type="text" class="form-control" id="codigoPropriedade" name="codigoPropriedade" placeholder="Digite o código">
+            	</div>
+            	<div class="col-md-3 d-flex align-items-end">
+                	<button type="submit" class="btn btn-primary">Filtrar</button>
+            	</div>
+        	</div>
+    	</form>
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
                 <tr>
