--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -85,7 +85,10 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/portarias/listar}">Controle de Portaria</a></li>
                   		 <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/notas/listar}">Listar todas as notas</a></li>
-                  		  <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/produtos/graficos1}">Gráfico</a></li>
+                  		  <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/produtos/graficos1}">Gráfico Produto Peso</a></li>
+                  		  <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/produtos/graficos2}">Gráfico Subgrupos Peso</a></li>
+                  		   <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/produtos/grafico3}">Gráfico Combinado Peso</a></li>
+                  		  
                     </ul>
                 </li>
                 
